feat: 카카오맵 클러스터링 및 체육시설 마킹 성공

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -25,6 +25,9 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": [
-    "src"
+    "src",
+    "src/**/*.ts", // 모든 TypeScript 파일 포함
+    "src/**/*.tsx", // 모든 TSX 파일 포함
+    "src/types/global.d.ts"
   ]
 }
